title of webpage changed

--- a/three-maze/index.html
+++ b/three-maze/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Three Maze</title>
+    <title>Autonomous Learning</title>
     <link
       href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,600"
       rel="stylesheet"
