--- a/three-maze/index.html
+++ b/three-maze/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Autonomous Learning</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link
       href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,600"
       rel="stylesheet"
